# barcode_detection_dataset

./: .editorconfig  .gitattributes  .gitignore  LICENSE_MIT.md  README.md  container.build.sh  containerfile  containerignore  delabels.py  dezip.ps1  labels.py  pyproject.toml  zip.ps1
1d_barcode_extended/: README.md
1d_barcode_extended/images/JPEGImages/: .gitignore
1d_barcode_extended/labels/JPEGImages/: IMAG0388.txt  IMAG0389.txt  IMAG0390.txt  IMAG0391.txt  IMAG0393.txt  IMAG0396.txt  IMAG0397.txt  IMAG0398.txt  IMAG0399.txt  IMAG0400.txt  IMAG0401.txt  IMAG0402.txt  IMAG0403.txt  IMAG0404.txt  IMAG0405.txt  IMAG0406.txt  IMAG0407.txt  IMAG0408.txt  IMAG0409.txt  IMAG0410.txt  IMAG0411.txt  IMAG0413.txt  IMAG0414.txt  IMAG0415.txt  IMAG0416.txt  IMAG0417.txt  IMAG0418.txt  IMAG0419.txt  IMAG0420.txt  IMAG0421.txt  IMAG0422.txt  IMAG0423.txt  IMAG0424.txt  IMAG0425.txt  IMAG0426.txt  IMAG0427.txt  IMAG0428.txt  IMAG0429.txt  IMAG0430.txt  IMAG0431.txt  (+114 more)
1d_barcode_extended_plain/: README.md
1d_barcode_extended_plain/labels/Original/: 05102009081.txt  05102009082.txt  05102009083.txt  05102009101.txt  05102009102.txt  05102009103.txt  05102009104.txt  05102009105.txt  05102009106.txt  05102009108.txt  05102009110.txt  05102009111.txt  05102009114.txt  05102009115.txt  05102009117.txt  05102009118.txt  05102009119.txt  05102009120.txt  05102009121.txt  05102009122.txt  05102009123.txt  (+344 more)
BarcodeDatasets/: README.md
WWU_Muenster_Barcode_Database/: README.md
extends/: README.md  add_labels.py
pictures/: resize.py  transfer90.py
utils/: exif_each.sh
(+2477 files in other folders)
